--- a/public/403.html
+++ b/public/403.html
@@ -1,4 +1,21 @@
-<div id="errors">
-  <h1>403 Forbidden</h1>
-  <p>指定されたページを表示する権限がありません</p>
-</div>
+<!DOCTYPE html>
+
+<html>
+
+<head>
+
+<title>Forbidden(403)</title>
+
+<meta name="viewport" content="width=device-width,initial-scale=1">
+
+</head>
+
+
+
+<body>
+
+<p>このページへのアクセス権限がありません。</p>
+
+</body>
+
+</html>
